feat: audit the ADD action